# recrut-sg-sre

./: CHANGELOG.md  CLAUDE.md  README.md  TODO.md  flake.nix
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  repository.py  router.py  service.py
backend/tests/: conftest.py  test_router.py  test_service.py
frontend/: package.json
frontend/src/: App.tsx  vite-env.d.ts
terraform/: .gitignore  .terraform.lock.hcl  backend.tf  certificates.tf  database.tf  dns.tf  frontend.tf  locals.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
