[project]
name = "backend"
version = "0.1.0"
description = "URL shortener backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
